/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id "com.github.ben-manes.versions" version "0.42.0"
}

apply plugin: 'java'
apply plugin: 'jacoco'

repositories {
    mavenLocal()
    mavenCentral()
    maven{
        url "https://s01.oss.sonatype.org/content/repositories/snapshots/"
    }
    maven {
        url "https://clojars.org/repo/"
    }
}

dependencies {
    implementation 'net.java.dev.jna:jna:5.10.0'
    implementation 'net.java.dev.jna:jna-platform:5.10.0'
    implementation 'org.jline:jline:3.21.0'
    implementation 'org.json:json:20211205'
    implementation 'info.picocli:picocli-shell-jline3:4.6.2'
    implementation 'org.fusesource.jansi:jansi:2.4.0'
    implementation 'org.fusesource.hawtjni:hawtjni-runtime:1.18'
    implementation 'org.eclipse.jgit:org.eclipse.jgit:6.0.0.202111291000-r'
    implementation 'org.slf4j:slf4j-simple:2.0.0-alpha6'
    implementation 'com.formdev:flatlaf:2.4'
    implementation 'io.github.andrewauclair.ModernDocking:ModernDocking:0.1.1'

    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
    testImplementation 'org.assertj:assertj-core:3.22.0'
    testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.9'
    testImplementation 'org.mockito:mockito-core:4.3.1'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.3.1'

}

//tasks.withType(JavaCompile) {
//    options.compilerArgs.add("--enable-preview")
//}

test {
    useJUnitPlatform()
//    jvmArgs("--enable-preview")
}

description = 'micro task'
sourceCompatibility = '15'

jar {
    manifest.attributes.put("Main-Class", "com.andrewauclair.microtask.Main")

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }

    exclude 'META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}

// jpackage -i build/libs --main-class com.andrewauclair.microtask.Main --main-jar micro-task.jar --java-options "--enable-preview" --win-console --win-menu --name "micro-task" --copyright "Copyright (C) 2019-2022 Andrew Auclair - All Rights Reserved" --description "micro-task (command line task tracker)" --app-version 20.12.29
